hphp/hack/test/typecheck/sealed/class.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

<<__Sealed(B::class)>>
abstract class A {}

final class B extends A {}
final class C extends A {}
